# baobab-auth-security

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  integration_core.md  security.md
docs/ai_workflow/runs/BL-S-010-001/: 00_assignment.md  01_context.md  02_role_prompt.md  03_expected_outputs.md  04_worklog.md  05_tests_report.md  06_review.md  07_handoff.md  status.yaml
docs/ai_workflow/runs/BL-S-010-002/: 00_assignment.md  01_context.md  02_role_prompt.md  03_expected_outputs.md  04_worklog.md  05_tests_report.md  06_review.md  07_handoff.md  status.yaml
docs/ai_workflow/runs/BL-S-010-003/: 00_assignment.md  (+8 more)
docs/ai_workflow/state/: dependency_graph.yaml  lock.yaml  queue.yaml
docs/architecture/adr/: ADR-0001-layout-et-dependances.md  ADR-0002-argon2id-password-hashing.md  ADR-0003-jwt-rs256-et-durcissement.md  ADR-0004-refresh-tokens-opaques.md  ADR-0005-adaptation-ports-reels-core.md  ADR-0006-non-fuite-de-secrets.md  README.md
docs/backlog/backlogs/: BL-S-010-001.md  BL-S-010-002.md  BL-S-010-003.md  BL-S-010-004.md  BL-S-010-005.md  BL-S-010-006.md  BL-S-010-007.md  BL-S-020-001.md  BL-S-020-002.md  BL-S-020-003.md  BL-S-020-004.md  BL-S-020-005.md
docs/contracts/: public_api.md
docs/integrations/: compatibility_matrix.yaml  integration_gate.md
docs/integrations/reports/: baobab-auth-core-v0.5.1__baobab-auth-security-v0.1.0.md  baobab-auth-security-v0.1.1__baobab-auth-api-v0.1.0.md
docs/specifications/cahier-des-charges/: cahier-des-charges-v0.1.0.md
docs/specifications/us/: index.rst
docs/workflow/: SETUP.md
src/baobab_auth_security/: __init__.py  exceptions.py  version.py
src/baobab_auth_security/clock/: __init__.py  clock.py  fixed_clock.py  system_clock.py
src/baobab_auth_security/config/: __init__.py  security_settings.py
src/baobab_auth_security/integration/: __init__.py  core_claims_mapper.py  core_password_hasher_adapter.py  core_revocation_adapter.py  core_token_pair_mapper.py  core_token_provider_adapter.py
src/baobab_auth_security/jwks/: __init__.py  base64url_decoder.py  ec_jwk.py  ec_public_jwk_converter.py  jwk.py  jwk_public_key_loader.py  jwks.py  jwks_document_parser.py  jwks_provider.py  okp_jwk.py  okp_public_jwk_converter.py  public_jwk.py  public_jwk_converter.py  remote_jwks_fetcher.py  rsa_public_jwk_converter.py
src/baobab_auth_security/keys/: __init__.py  ec_key_generator.py  ed25519_key_generator.py  in_memory_key_provider.py  key_algorithm.py  key_generator.py  key_id_deriver.py  key_pair.py  key_status.py  pem_key_loader.py
src/baobab_auth_security/password/: __init__.py  argon2_password_hasher.py  password_hash_policy.py  password_hash_result.py  password_verification_result.py
src/baobab_auth_security/refresh_tokens/: __init__.py  refresh_token_generator.py  refresh_token_hasher.py  refresh_token_result.py
src/baobab_auth_security/revocation/: __init__.py  in_memory_revocation_checker.py  revocation_checker.py
src/baobab_auth_security/testing/: __init__.py  security_test_harness.py
src/baobab_auth_security/tokens/: __init__.py  jwt_algorithm.py  jwt_decoder.py  jwt_encoder.py  jwt_token_provider.py  jwt_validator.py  security_token_claims.py  security_token_pair.py  signing_key_types.py
tests/integration/core/: conftest.py  test_core_password_hasher_adapter.py  test_core_token_provider_adapter.py
tests/security/: test_no_secret_leakage.py
tests/unit/baobab_auth_security/: test_exceptions.py  test_init.py  test_version.py
(+103 files in other folders)
