[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baobab-auth-security"
version = "0.1.0"
description = "Brique de sécurité de l'écosystème baobab-auth : Argon2id, JWT RS256, refresh tokens opaques, clés RSA et JWKS local."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Patrick ANDRIANAIVO" }]
keywords = ["baobab-auth", "security", "argon2", "jwt", "jwks", "rsa", "authentication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "baobab-auth-core>=0.4.0,<1.0.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.0",
    "PyJWT>=2.10.0",
    "pydantic-settings>=2.14.2",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-auth-security"
Repository = "https://github.com/baobabgit/baobab-auth-security"
Documentation = "https://baobab-auth-security.readthedocs.io"
Issues = "https://github.com/baobabgit/baobab-auth-security/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baobab_auth_security"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "bandit[toml]>=1.9.4",
    "pytest-cov>=7.1.0",
    "nox>=2026.4.10",
    "build>=1.5.0",
    "twine>=6.2.0",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
]
docs = [
    "sphinx>=9.1.0",    
    "furo>=2025.12.19",
]

# --- Black : formatage -------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py313"]

# --- Ruff : lint uniquement (black gère le format) ---------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle (PEP 8)
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "D",        # pydocstyle (docstrings)
    "ANN",      # type annotations
    "RUF",      # ruff
]
ignore = [
    "D203", "D213",      # incompatibilités de style de docstring
    "D401",              # "imperative mood" : heuristique anglaise, inadaptée au français
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "N802"]
"scripts/**/*.py" = ["ANN401"]

# --- Mypy : typage strict ----------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true

# --- Pytest + couverture (≥ 95 % imposée) ------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=95"
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

# --- Bandit : analyse de sécurité statique (SAST) ----------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
